Fix redirect index page

--- a/SplashPageWebApp/Views/Login/ConnectedError.cshtml
+++ b/SplashPageWebApp/Views/Login/ConnectedError.cshtml
@@ -18,7 +18,7 @@
         <h1>OOPS</h1>
         <p>You have already connected!</p>
         <div class="sub">
-            <p><a href="#">Back to Home</a></p>
+            <p><a href="https://www.fis.com.vn/">Back to Home</a></p>
         </div>
     </div>
 </div>	
