Update: cleanup code and add ServicesFIS.dll

--- a/SplashPageWebApp/Views/Login/AdminLogin.cshtml
+++ b/SplashPageWebApp/Views/Login/AdminLogin.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "AdminLogin";
     Layout = null;
 }
@@ -8,34 +7,33 @@
 <head>
     <title>Administrator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
     <link rel="stylesheet" href="/Administrator/css/bootstrap.min.css">
-    <link href="/Administrator/css/style.css" rel='stylesheet' type='text/css' />
-    <link href="/Administrator/css/style-responsive.css" rel="stylesheet" />
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/Administrator/css/font.css" type="text/css" />
+    <link href="/Administrator/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="/Administrator/css/style-responsive.css" rel="stylesheet"/>
+    <link href="//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/Administrator/css/font.css" type="text/css"/>
     <link href="/Administrator/css/font-awesome.css" rel="stylesheet">
     <script src="/Administrator/js/jquery2.0.3.min.js"></script>
 </head>
 <body>
-    <div class="log-w3">
-        <div class="w3layouts-main">
-            <h2>Admin Login</h2>
-            <form action="#" method="post">
-                <input type="email" class="ggg" name="Email" placeholder="E-MAIL" required=""/>
-                <input type="password" class="ggg" name="Password" placeholder="PASSWORD" required=""/>
-                <div class="clearfix"></div>
-                <input type="submit" value="Sign In" name="login">
-            </form>
-        </div>
+<div class="log-w3">
+    <div class="w3layouts-main">
+        <h2>Admin Login</h2>
+        <form action="#" method="post">
+            <input type="email" class="ggg" name="Email" placeholder="E-MAIL" required=""/>
+            <input type="password" class="ggg" name="Password" placeholder="PASSWORD" required=""/>
+            <div class="clearfix"></div>
+            <input type="submit" value="Sign In" name="login">
+        </form>
     </div>
-    <script src="/Administrator/js/bootstrap.js"></script>
-    <script src="/Administrator/js/jquery.dcjqaccordion.2.7.js"></script>
-    <script src="/Administrator/js/scripts.js"></script>
-    <script src="/Administrator/js/jquery.slimscroll.js"></script>
-    <script src="/Administrator/js/jquery.nicescroll.js"></script>
-    <script src="/Administrator/js/jquery.scrollTo.js"></script>
+</div>
+<script src="/Administrator/js/bootstrap.js"></script>
+<script src="/Administrator/js/jquery.dcjqaccordion.2.7.js"></script>
+<script src="/Administrator/js/scripts.js"></script>
+<script src="/Administrator/js/jquery.slimscroll.js"></script>
+<script src="/Administrator/js/jquery.nicescroll.js"></script>
+<script src="/Administrator/js/jquery.scrollTo.js"></script>
 </body>
 </html>
-
