--- a/SplashPageWebApp/Views/Login/ConnectedError.cshtml
+++ b/SplashPageWebApp/Views/Login/ConnectedError.cshtml
@@ -1,6 +1,4 @@
-﻿@using SplashPageWebApp.Models
-
-@{
+﻿@{
     ViewBag.Title = "ConnectedError";
     Layout = null;
 }
@@ -9,8 +7,8 @@
 <head>
     <title>Oops</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link href='//fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/FISProject/css/connectederror.css" type="text/css" media="all" />
+    <link href="//fonts.googleapis.com/css?family=Capriola" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/FISProject/css/connectederror.css" type="text/css" media="all"/>
 </head>
 <body>
 <div class="wrap">
@@ -18,8 +16,10 @@
         <h1>OOPS</h1>
         <p>You have already connected!</p>
         <div class="sub">
-            <p><a href="https://www.fis.com.vn/">Back to Home</a></p>
+            <p>
+                <a href="https://www.fis.com.vn/">Back to Home</a>
+            </p>
         </div>
     </div>
-</div>	
+</div>
 </body>
