--- a/SplashPageWebApp/Administrator/css/jqvmap.css
+++ b/SplashPageWebApp/Administrator/css/jqvmap.css
@@ -1,50 +1,42 @@
-.jqvmap-label
-{
-	position: absolute;
-	display: none;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	background: #292929;
-	color: white;
-	font-family: sans-serif, Verdana;
-	font-size: smaller;
-	padding: 3px;
-  pointer-events:none;
+.jqvmap-label {
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #292929;
+    border-radius: 3px;
+    color: white;
+    display: none;
+    font-family: sans-serif, Verdana;
+    font-size: smaller;
+    padding: 3px;
+    pointer-events: none;
+    position: absolute;
 }
-.jqvmap-pin {
-  pointer-events:none;
+
+.jqvmap-pin { pointer-events: none; }
+
+.jqvmap-zoomin, .jqvmap-zoomout {
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #000000;
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    height: 10px;
+    left: 10px;
+    line-height: 10px;
+    padding: 3px;
+    position: absolute;
+    text-align: center;
+    width: 10px;
 }
-.jqvmap-zoomin, .jqvmap-zoomout
-{
-	position: absolute;
-	left: 10px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	background: #000000;
-	padding: 3px;
-	color: white;
-	width: 10px;
-	height: 10px;
-	cursor: pointer;
-	line-height: 10px;
-	text-align: center;
-}
-.jqvmap-zoomin
-{
-	top: 10px;
-}
-.jqvmap-zoomout
-{
-	top: 30px;
-}
-.jqvmap-region
-{
-  cursor: pointer;
-}
-.jqvmap-ajax_response
-{
-  width: 100%;
-  height: 500px;
+
+.jqvmap-zoomin { top: 10px; }
+
+.jqvmap-zoomout { top: 30px; }
+
+.jqvmap-region { cursor: pointer; }
+
+.jqvmap-ajax_response {
+    height: 500px;
+    width: 100%;
 }
