--- a/SplashPageWebApp/Views/Login/Index.cshtml
+++ b/SplashPageWebApp/Views/Login/Index.cshtml
@@ -152,9 +152,9 @@
     <div class="main-content-agile">
 
         <div class="sub-main-w3">
-            <div class="wthree-pro">
+            <div class="wthree-pro" style="margin-bottom: 20px;">
                 <h2>Free Wi-Fi Hotspot</h2><br/>
-                <span id="message" class="error" style="margin-bottom: 10px; visibility: hidden">Error</span>
+                <span id="message" class="error" style="visibility: hidden">Error</span>
             </div>
 
             <form method="post" action='@Url.Action("Index", "Login")' id="login-form">
