--- a/SplashPageWebApp/Views/Login/Index.cshtml
+++ b/SplashPageWebApp/Views/Login/Index.cshtml
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Online Login Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert-dev.js" type="text/javascript"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="/FISProject/css/style.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="/FISProject/css/font-awesome.css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
@@ -40,18 +42,20 @@
                     "success": function(data) {
 
                         if (data.success == true) {
-                            $('[name=code]').removeAttr('disabled');
+                            //$('[name=code]').removeAttr('disabled');
                             $('[name=loginWifi]').removeAttr('disabled');
                             $('[name=email]').attr("disabled", "disabled");
                             $('[name=checkEmail]').attr("disabled", "disabled");
                             codeId = data.id;
                             label.css("visibility", "hidden");
+                            $('#code').val(data.generatedCode);
                         } else {
                             $('[name=email]').removeAttr("disabled");
                             $('[name=checkEmail]').removeAttr("disabled");
                             $('[name=name]').removeAttr("disabled");
-                            $('#message').css("visibility", "visible");
-                            $('#message').text(data.message);
+                            swal("Invalid!", "Sponsor's email should look like example@gmail.com");
+                            //$('#message').css("visibility", "visible");
+                            //$('#message').text(data.message);
                             label.css("visibility", "visible");
                         }
 
@@ -91,8 +95,9 @@
                         if (data.success == false) {
                             var label = $('label[for=code]');
                             label.css("visibility", "visible");
-                            $('#message').css("visibility", "visible");
-                            $('#message').text(data.message);
+                            swal("Failed", "Please contact the sponsor to access wifi", "error");
+                            //$('#message').css("visibility", "visible");
+                            //$('#message').text(data.message);
                         } else {
                             createSubmitForm();
                         }
@@ -143,17 +148,13 @@
     </script>
 </head>
 <body>
-<div class="center-container">
-
+<div>
     <div class="header-w3l">
         <h1>FPT Information System</h1>
     </div>
-
-    <div class="main-content-agile">
-
+    <div>
         <div class="sub-main-w3">
-            <div class="wthree-pro" style="margin-bottom: 20px;">
-                <h2>Free Wi-Fi Hotspot</h2><br/>
+            <div class="wthree-pro">
                 <span id="message" class="error" style="visibility: hidden">Error</span>
             </div>
 
@@ -164,24 +165,23 @@
                 <input TYPE="hidden" NAME="err_flag" SIZE="16" MAXLENGTH="15" value="">
 
                 <div class="pom-agile">
-                    <input placeholder="E-mail" name="email" id="email" class="user" type="email" required="" onfocus="clearMessage()">
-                    <span class="icon1">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                    </span>
+                    <h4 style="font-size: 15px; color: white; text-shadow: 3px 1px 3px #101010;">* Sponsor's &#64;gmail.com email address</h4>
+                    <input name="email" id="email" class="pass" type="email" required="" onfocus="clearMessage()">
                 </div>
 
                 <div class="pom-agile">
-                    <input placeholder="Fullname" name="name" id="name" class="pass" type="text" required="">
-                    <span class="icon2">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                    </span>
+                    <h4 style="font-size: 15px; color: white; text-shadow: 3px 1px 3px #101010;">* Your full name (First and Last)</h4>
+                    <input name="name" id="name" class="pass" type="text" required="">
                 </div>
 
                 <div class="pom-agile">
-                    <input placeholder="Code" name="code" id="code" class="pass" disabled="" type="text" required="" onfocus="clearMessage()">
-                    <span class="icon2">
-                        <i class="fa fa-key" aria-hidden="true"></i>
-                    </span>
+                    <h4 style="font-size: 15px; color: white; text-shadow: 3px 1px 3px #101010;">* Your email address</h4>
+                    <input name="code" id="useremail" class="pass" type="text" required="">
+                </div>
+                
+                <div class="pom-agile">
+                    <h4 style="font-size: 15px; color: white; text-shadow: 3px 1px 3px #101010;">Your generated code</h4>
+                    <input name="code" id="code" class="pass" disabled="" type="text" required="" onfocus="clearMessage()">
                 </div>
 
                 <div class="sub-w3l">
