--- a/SplashPageWebApp/Views/Login/Successfull.cshtml
+++ b/SplashPageWebApp/Views/Login/Successfull.cshtml
@@ -36,7 +36,7 @@
             <h1 class="w3-xxlarge w3-center">Congratulations</h1>
             <hr class="w3-border-grey" style="margin:auto;width:40%">
             <p class="w3-large w3-center">You are successfully connected to our Wi-Fi</p>
-            <p><a href="https://www.google.com.vn/" class="w3-button w3-xxlarge w3-blue">Go!</a></p>
+            <p><a href="http://www.fis.com.vn/" class="w3-button w3-xxlarge w3-blue">Go!</a></p>
         </div>
     </div>
 </body>
