--- a/SplashPageWebApp/Views/Login/Index.cshtml
+++ b/SplashPageWebApp/Views/Login/Index.cshtml
@@ -54,7 +54,7 @@
                             $('[name=checkEmail]').removeAttr("disabled");
                             $('#name').removeAttr("disabled");
                             $('#userEmail').removeAttr("disabled");
-                            swal("Invalid!", "Sponsor's email should look like example@gmail.com");
+                            swal("Invalid!", "Sponsor's email should look like example" + data.domainName);
                             //$('#message').css("visibility", "visible");
                             //$('#message').text(data.message);
                             label.css("visibility", "visible");
